frontend/tests/errors/ER-040/prefix_array_cast_rejected/test.vx
// @rfc: docs/vexel-rfc.md#types
// @desc: Prefix array type spelling is not supported. | Reject prefix array cast syntax

&^main() -> #i32 {
    bytes:#u8[4] = [1,2,3,4];
    packed:#u32 = ([4]#u8)bytes;
    (#i32)packed
}
